--- a/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
@@ -272,6 +272,8 @@ Lisää kaupunki manuaalisesti napauttamalla"</string>
   <string name="share_weather_desc">\#MIUI Sää#Tänään %1$s %2$s</string>
   <string name="share_weather_desc_split">,</string>
   <string name="share_weather_save_pic_fail">Kuvankaappauksen ottaminen epäonnistui</string>
+  <string name="shortcut_short_label_24_hour_forecast">24-tunnin ennustus</string>
+  <string name="shortcut_short_label_recent_forecast">Tarkista sää</string>
   <string name="some_where_on_earth">Jossain maapallolla</string>
   <string name="sunrise">Auringonnousu</string>
   <string name="sunset">Auringonlasku</string>
