--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -1,11 +1,26 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- MIUI 10 valmis -->
+  <string name="abc_action_bar_home_description">Siirry etusivulle</string>
+  <string name="abc_action_bar_up_description">Siirry ylös</string>
+  <string name="abc_action_menu_overflow_description">Lisäasetukset</string>
+  <string name="abc_action_mode_done">Valmis</string>
+  <string name="abc_activity_chooser_view_see_all">Näytä kaikki</string>
+  <string name="abc_activitychooserview_choose_application">Valitse sovellus</string>
+  <string name="abc_capital_off">POIS KÄYTÖSTÄ</string>
+  <string name="abc_capital_on">KÄYTÖSSÄ</string>
+  <string name="abc_search_hint">Haku…</string>
+  <string name="abc_searchview_description_clear">Tyhjennä kysely</string>
+  <string name="abc_searchview_description_query">Hakukysely</string>
+  <string name="abc_searchview_description_search">Haku</string>
+  <string name="abc_searchview_description_submit">Lähetä kysely</string>
+  <string name="abc_searchview_description_voice">Puhehaku</string>
+  <string name="abc_shareactionprovider_share_with">Jaa…</string>
+  <string name="abc_shareactionprovider_share_with_application">Jaa: %s</string>
+  <string name="abc_toolbar_collapse_description">Tiivistä</string>
   <string name="passport_talkback_image_captcha">Kuvanvahvistuskoodi</string>
   <string name="passport_talkback_switch_image_captcha">Vaihda kuvanvahvistuskoodiin</string>
   <string name="passport_talkback_switch_voice_captcha">Vaihda äänivahvistuskoodiin</string>
   <string name="passport_talkback_voice_captcha">Toista äänivahvistuskoodi</string>
-  <!-- MIUI 10 valmis -->
   <string name="about_device_info">Näytä laitteen tiedot</string>
   <string name="access_token_expired_warning">Weibo Tili on vanhentunut</string>
   <string name="access_token_invalid_warning">Weibo Tili on väärin</string>
@@ -67,7 +82,6 @@
   <string name="bind_facebook">Yhdistä Facebook Tilisi</string>
   <string name="bind_qq">QQ</string>
   <string name="bind_safe_phone_msg">Lisää puhelinnumerosi, jotta voit kirjautua sisään Mi Tilillesi seuraavalla kerralla.</string>
-  <string name="bind_settings">Tilit</string>
   <string name="bind_sina_weibo">Yhdistä Sina Weibo Tili</string>
   <string name="bind_sns_description">Kirjaudu sisään käyttäen %s</string>
   <string name="bind_weibo_description">Lisää ystäviäsi Sina Weibo:sta</string>
@@ -80,6 +94,47 @@
   <string name="change_phone_number">Vaihda puhelinnumero</string>
   <string name="cloud_service">Mi Pilvi</string>
   <string name="collect_diagnosis_log">Generoi diagnostiikkaloki</string>
+  <string name="com_facebook_device_auth_instructions">Vieraile osoitteessa facebook.com/device ja syötä yllä näkyvä koodi.</string>
+  <string name="com_facebook_image_download_unknown_error">Odottamaton virhe kuvan lataamisessa.</string>
+  <string name="com_facebook_internet_permission_error_message">WebView-kirjautuminen vaatii internetin käyttöoikeuden</string>
+  <string name="com_facebook_internet_permission_error_title">AndroidManifest Virhe</string>
+  <string name="com_facebook_like_button_liked">Tykätty</string>
+  <string name="com_facebook_like_button_not_liked">Tykkää</string>
+  <string name="com_facebook_loading">Ladataan…</string>
+  <string name="com_facebook_loginview_cancel_action">Peruuta</string>
+  <string name="com_facebook_loginview_log_in_button">Kirjaudu sisään</string>
+  <string name="com_facebook_loginview_log_in_button_continue">Jatka Facebookilla</string>
+  <string name="com_facebook_loginview_log_in_button_long">Kirjaudu sisään Facebookilla</string>
+  <string name="com_facebook_loginview_log_out_action">Kirjaudu ulos</string>
+  <string name="com_facebook_loginview_log_out_button">Kirjaudu ulos</string>
+  <string name="com_facebook_loginview_logged_in_as">Kirjauduttu käyttäjänä: %1$s</string>
+  <string name="com_facebook_loginview_logged_in_using_facebook">Kirjauduttu sisään käyttäen Facebookia</string>
+  <string name="com_facebook_send_button_text">Lähetä</string>
+  <string name="com_facebook_share_button_text">Jaa</string>
+  <string name="com_facebook_smart_device_instructions">Yhdistääksesi tilisi, avaa Facebook sovellus mobiililaitteellasi ja tarkista ilmoitukset.</string>
+  <string name="com_facebook_smart_device_instructions_or">- TAI -</string>
+  <string name="com_facebook_smart_login_confirmation_cancel">Etkö ole sinä?</string>
+  <string name="com_facebook_smart_login_confirmation_continue_as">Jatka käyttäjänä %1$s</string>
+  <string name="com_facebook_smart_login_confirmation_title">Vahvista Kirjautuminen</string>
+  <string name="com_facebook_tooltip_default">Sinä määräät - valitse mitä tietoja haluat jakaa sovelluksille.</string>
+  <string name="common_google_play_services_enable_button">Ota käyttöön</string>
+  <string name="common_google_play_services_enable_text">%1$s ei toimi ellet ota Google Play -palveluita käyttöön.</string>
+  <string name="common_google_play_services_enable_title">Ota Google Play -palvelut käyttöön</string>
+  <string name="common_google_play_services_install_button">Asenna</string>
+  <string name="common_google_play_services_install_text">%1$s ei käynnisty ilman Google Play -palveluita, jotka puuttuvat laitteeltasi.</string>
+  <string name="common_google_play_services_install_title">Hanki Google Play -palvelut</string>
+  <string name="common_google_play_services_notification_channel_name">Google Play -palvelun saatavuus</string>
+  <string name="common_google_play_services_notification_ticker">Google Play -palvelun virhe</string>
+  <string name="common_google_play_services_unknown_issue">%1$s on ongelmia Google Play -palveluiden kanssa. Yritä uudelleen.</string>
+  <string name="common_google_play_services_unsupported_text">%1$s ei käynnisty ilman Google Play -palveluita, jota laitteesi ei tue.</string>
+  <string name="common_google_play_services_update_button">Päivitä</string>
+  <string name="common_google_play_services_update_text">%1$s ei käynnistys ellet päivitä Google Play -palveluita.</string>
+  <string name="common_google_play_services_update_title">Päivitä Google Play -palvelut</string>
+  <string name="common_google_play_services_updating_text">%1$s ei käynnisty ilman Google Play -palveluita, jotka juuri päivittyvät.</string>
+  <string name="common_google_play_services_wear_update_text">Uusi versio Google Play -palveluista vaaditaan. Se päivittää itsensä hetken kuluttua.</string>
+  <string name="common_open_on_phone">Avaa puhelimessa</string>
+  <string name="common_signin_button_text">Kirjaudu sisään</string>
+  <string name="common_signin_button_text_long">Kirjaudu Googlella</string>
   <string name="completed">Kaikki valmiina!</string>
   <string name="confirm_activate_email">Todennettu</string>
   <string name="confirm_bundled_phone_dialog_title">Vahvista liitetty puhelinnumero</string>
@@ -291,7 +346,7 @@ Aktivoi tilisi seuraamalla
   <string name="passport_login_instead_reg">Käytä tätä numeroa</string>
   <string name="passport_login_instead_reg_with_email">Käytä tätä sähköpostia</string>
   <string name="passport_login_other_account">Toinen tili</string>
-  <string name="passport_login_prompt">Yksi Mi Tili. Kaikki Mi palvelut.</string>
+  <string name="passport_login_prompt">Kaikki Mi-palvelut. Yksi Mi Tili.</string>
   <string name="passport_login_recycle_account_no">Ei</string>
   <string name="passport_login_recycle_account_yes">Kyllä</string>
   <string name="passport_login_title">Kirjaudu sisään Mi Tilillesi</string>
@@ -406,6 +461,7 @@ Aktivoi tilisi seuraamalla
   <string name="passport_wrong_phone_number_format">Antamasi puhelinnumeron muoto ei kelpaa</string>
   <string name="passport_wrong_vcode">Antamasi koodi on virheellinen</string>
   <string name="passport_wrong_voice">Antamasi koodi on virheellinen</string>
+  <string name="passport_wx_bind_account_limit">Tiliä ei voi juuri nyt luoda. Kokeile toisia kirjautumismuotoja.</string>
   <string name="passport_yes">Kyllä</string>
   <string name="permission_group_contacts">Yhteystiedot</string>
   <string name="permission_group_phone">Puhelin</string>
@@ -437,6 +493,7 @@ Aktivoi tilisi seuraamalla
   <string name="search_account_security_key_words">Vaihda Puhelin,Vaihda Sähköposti,Tilin suojaus,Tilit,Sina Weibo,QQ,Valtuutus,Laitteet</string>
   <string name="search_account_security_path">Asetukset/Mi Tili/Tilin tietoturva</string>
   <string name="search_app_name">Mi Tili</string>
+  <string name="search_menu_title">Haku</string>
   <string name="search_mi_account">Mi Tili</string>
   <string name="search_mi_account_desc">Mi Tili</string>
   <string name="search_mi_account_key_words">Mi Pilvi,Tilin Asetukset,Mi Pay Tiedot,Kirjaudu Ulos</string>
