--- a/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
@@ -1,10 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- 9.4.15 -->
   <string name="err_no_gms">Yhteensopimaton sovellusversio. Asenna tämä sovellus erikseen.</string>
   <string name="trans_detail_item_app_data_skip_data">Sovellustietoja ei voi siirtää</string>
-  <!-- // 9.4.15 // -->
-  <!-- 8.9.17 -->
   <string name="trans_cancel_dialog_survey_title">Miksi keskeytit siirron?</string>
   <string name="trans_dialog_survey_finish">Lähetä</string>
   <string name="trans_success_dialog_button_market_comment">Kommentoi</string>
@@ -12,8 +9,6 @@
   <string name="trans_success_dialog_market_comment_and_survey_title">Olet valmis rokkaamaan! Kerro meille, mitä mieltä olet Mi Moverista.</string>
   <string name="trans_success_dialog_survey_title">Arvostamme palautettasi</string>
   <string name="trans_success_survey_hint">Täytä ensin kaikki kentät.</string>
-  <!-- // 8.9.17 // -->
-  <!-- 8.6.28 -->
   <string name="err_acquire_system_service">Järjestelmäpalvelua ei voitu käynnistää.</string>
   <string name="trans_button_exit">Poistu</string>
   <string name="trans_button_stay">Pysy</string>
@@ -21,8 +16,6 @@
   <string name="trans_cancel_selection_title">Pysy Mi Moverissa</string>
   <string name="trans_select_notification_message">Näytä napauttamalla</string>
   <string name="trans_select_notification_title">Mi Mover työskentelee…</string>
-  <!-- // 8.6.28 -->
-  <!-- 8.6.11 -->
   <string name="feature_title_contacts">Yhteystiedot</string>
   <string name="feature_title_sms">Viestit</string>
   <string name="flash_drive_backup_btn">Varmuuskopioi USB-asemalle</string>
@@ -33,6 +26,7 @@ Varmista, että USB-asemassa on tarpeeksi tallennustilaa ennen aloittamista."</s
   <string name="flash_drive_restore_btn">Palauta USB-asemalta</string>
   <string name="flash_drive_search_backup_files">"Etsitään USB-varmuuskopiota…
 Älä muuta tai nimeä uudelleen varmuuskopioituja tiedostoja."</string>
+  <string name="gallery_summary">Gallerian asetukset (ei sisällä kuvia)</string>
   <string name="lack_perm_msg">Mi Mover tarvitsee seuraavat käyttöoikeudet: &lt;b&gt;%s&lt;/b&gt;.</string>
   <string name="lack_perm_title">Käyttöoikeuksia vaaditaan</string>
   <string name="perm_camera">Kamera</string>
@@ -81,8 +75,7 @@ Vapauta tilaa tai luo useampi pienempi siirto."</string>
   <string name="usb_trans_old_phone_low_space_title">Tallennustilaa ei ole tarpeeksi</string>
   <string name="usb_trans_select_data_no_space">"USB-asemallasi on käytettävissä vain %s.
 Vapauta tilaa tai siirrä vain tärkeät kohteet."</string>
-  <!-- // 8.6.11 -->
-
+  <string name="user_feedback">Palaute</string>
   <string name="abort_backup_confirm">Varmuuskopiointi ei ole vielä valmis. Lopetetaanko kuitenkin?</string>
   <string name="abort_restore_confirm">Palauttaminen ei ole valmis. Lopetetaanko silti?</string>
   <string name="account_contact_backup_info">Google Tili, Mi Tili, ja Yhteystietojen tiedot</string>
@@ -353,7 +346,7 @@ http://www.miliao.com
   <string name="notif_trans_sending_failed">Tietojen lähettäminen epäonnistui</string>
   <string name="notif_trans_wait_for_reconnecting">Yhteys keskeytyi. Yhdistä uudelleen.</string>
   <string name="old_soft_name">Yhdistä käyttäen QR-koodia</string>
-  <string name="old_way">Voit yhdistää myös käyttäen QR-koodia. Luo koodi napauttamalla.</string>
+  <string name="old_way">Voit myös luoda QR-koodin uudella laitteellasi ja skannata sen vanhalla.</string>
   <string name="page_loading">Odota hetki…</string>
   <string name="password">Salasana</string>
   <string name="password_null">Salasana ei voi olla tyhjä</string>
@@ -641,8 +634,9 @@ ja Mi Mover on käytössä"</string>
   <string name="user_notice_message">Jotkut toiminnot tarvitsevat internet yhteyden toimiakseen normaalisti.</string>
   <string name="user_notice_title">Huomio</string>
   <string name="view_password_description">Näytä salasana</string>
-  <string name="wait_link">"Yhdistä vanha laitteesi tähän hotspottiin.
-Älä poistu tältä sivulta, ennen kuin yhteys on muodostettu."</string>
+  <string name="wait_link">"Avaa Mi Mover vanhalla laitteella,
+napauta \"Olen lähettäjä\" ja valitse yhdistettävä Hotspot.
+Älä sulje sivua, ennen kuin yhteys on muodostettu."</string>
   <string name="waiting">Odota hetki…</string>
   <string name="wifi_title">Wi-Fi asetukset</string>
   <string name="xiaomi_connect_download_manager_fail">Lataamista ei voitu aloittaa. Varmista, että Download Manager toimii normaalisti.</string>
