--- a/Finnish/main/SecurityAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityAdd.apk/res/values-fi-rFI/strings.xml
@@ -20,6 +20,16 @@
   <string name="ad_downloading">Lataa…</string>
   <string name="app_name">Järjestelmäpalvelun liitännäinen</string>
   <string name="cancel_button">Peruuta</string>
+  <string name="dialog_market_score_cancel">Peruuta</string>
+  <string name="dialog_market_score_dislike">Kommentoi</string>
+  <string name="dialog_market_score_like">5 tähteä!</string>
+  <string name="dialog_market_score_positive_button">Kommentoi</string>
+  <string name="dialog_market_score_submit">Lähetä</string>
+  <string name="dialog_market_score_subtitle_step1">Napauta tähtiä arvostellaksesi tämän sovelluksen</string>
+  <string name="dialog_market_score_subtitle_step2">Voit myös jättää kommentin.</string>
+  <string name="dialog_market_score_subtitle_step3">Arvostele tämä sovellus</string>
+  <string name="dialog_market_score_title_step1_format">Tykkäätkö \"%s\"?</string>
+  <string name="dialog_market_score_title_step2">Kiitos palautteestasi!</string>
   <string name="dual_app_title">Kaksoissovellukset</string>
   <string name="dual_app_words">Jokainen tili ansaitsee oman sovelluksensa</string>
   <string name="fastboot_locked_answer_1">Fastboot on perinteinen Mi laitteiden asennusmenetelmä. Kun laite on Fastboot-tilassa, kaikkiin siihen tallennettuihin tietoihin päästään käsiksi ja ne voidaan poistaa suoraan. Lukitsemme Fastbootin varmistaaksemme, että tietosi pysyvät turvallisina, jos hukkaat laitteen ja se takaa myös Etsi laite -ominaisuuksien luotettavuuden.</string>
